# library-SSH

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: scp.h  ssh.h
source/: CMakeLists.txt  scp.c  ssh.c
